refactor: #2 예외처리리 추가작업
- comment 에서 type 에 대한 예외 처리가 미흡